# VkLearn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bindings_management.hpp  commands.hpp  descriptors.hpp  global_objects.hpp  graphics_pipeline.hpp  main.cpp  main.manifest  main_deprecated.cpp  memory_management.hpp  model_data.hpp  render_thread.hpp  renderer.hpp  renderer_deprecated.hpp  renderpass.hpp  resource_management.hpp  rewritten_main.cpp  rt_renderer.hpp  shader_modules.hpp  utils.hpp  vcpkg.json
cmake/: AddGLSLShader.cmake  AddTexture.cmake  FindOpenVR.cmake
include/: commands_management.cpp  commands_management.h  utils.cpp  utils.h
libs/: CMakeLists.txt
shaders/: shader.frag  shader.vert  testAttr.frag  testAttr.vert
